--- a/sass/landing-main.scss
+++ b/sass/landing-main.scss
@@ -35,7 +35,11 @@ h2 {
   background-color: rgb(0, 157, 111);
   color: white;
   text-align: center;
-  padding: 5em;
+  padding: 5em 5em 1em 5em;
+}
+
+.hero .social {
+  margin: 4em auto 0em;
 }
 
 .hero p {
